# ocr-benchmark

./: .env.sample  LICENSE  README.md  prompts.yaml  pyproject.toml  requirements.txt  run.py  utils.py
configs/: ocr_config.py
ground_truth_preparation/: create_videodb_collection.py  prepare_ground_truth.py
models/: __init__.py  anthropic.py  base_model.py  easyocr.py  google.py  moondream.py  openai.py  rapidocr.py
ocr_ground_truths/: m-z-0194c270-bbfb-7dd2-aaec-62d909b97b32_ground_truth.json  m-z-0194c272-dd5c-7a62-8d86-a47e3c4e4670_ground_truth.json  m-z-0194c27c-894f-7e11-beac-6da09861f796_ground_truth.json  m-z-0194c27c-aebe-75d0-812f-06fbeb60b7d6_ground_truth.json  m-z-0194c27c-d107-7030-b990-0b5cc62f514a_ground_truth.json  m-z-0194c27c-f30c-7803-b2ca-8f1026c940a2_ground_truth.json  m-z-0194c27d-10a6-7531-9aaf-d7940a9469b1_ground_truth.json  m-z-0194c27d-2e68-7e63-b44e-5abbe36938df_ground_truth.json  m-z-0194c27d-50bc-7c22-9d73-3756717196d5_ground_truth.json  m-z-0194c27d-71a3-72c2-9710-773f6f6b80b5_ground_truth.json  m-z-0194c27d-98b2-75c0-afff-77c8b24515bc_ground_truth.json  m-z-0194c27d-b22a-7982-a796-e332a82d5596_ground_truth.json  m-z-0194c27d-d8d7-73b3-b136-1f4af218cb12_ground_truth.json  m-z-0194c27d-f7f8-7d03-b053-7f0e75498476_ground_truth.json  m-z-0194c27e-19c0-7270-9b2e-d467ff30fd1a_ground_truth.json  m-z-0194c27e-408d-73b1-b550-5bf76fb0339d_ground_truth.json  m-z-0194c27e-5dcf-73b3-a129-e9217d8e611f_ground_truth.json  m-z-0194c27e-99ce-7fc0-867f-9bc8358d3388_ground_truth.json  m-z-0194c27e-fe96-7403-a0d8-17a033e5f595_ground_truth.json  (+6 more)
(+3 files in other folders)
